--- a/frontend/src/styles/styles.css
+++ b/frontend/src/styles/styles.css
@@ -744,8 +744,8 @@ body {
 .btn-primary-large {
   background-color: #2abad4;
   color: #ffffff;
-  padding: 1.35rem 3rem;
-  font-size: 1.15rem;
+  padding: 1rem 2rem;
+  font-size: 1.1rem;
   border-color: #2abad4;
   font-weight: 700;
 }
